--- a/Src/Common/Observability/Observability.csproj
+++ b/Src/Common/Observability/Observability.csproj
@@ -7,16 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.8" />
-    <PackageReference Include="Sentry.Serilog" Version="5.14.0" />
-	<PackageReference Include="Serilog" Version="4.3.0" />
-	<PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
-	<PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
-	<PackageReference Include="Serilog.Enrichers.Process" Version="3.0.0" />
-	<PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
-	<PackageReference Include="Serilog.Expressions" Version="5.0.0" />
-	<PackageReference Include="Serilog.Sinks.Debug" Version="3.0.0" />
-	<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
+    <PackageReference Include="Sentry.Serilog" />
+	<PackageReference Include="Serilog" />
+	<PackageReference Include="Serilog.AspNetCore" />
+	<PackageReference Include="Serilog.Enrichers.Environment" />
+	<PackageReference Include="Serilog.Enrichers.Process" />
+	<PackageReference Include="Serilog.Enrichers.Thread" />
+	<PackageReference Include="Serilog.Expressions" />
+	<PackageReference Include="Serilog.Sinks.Debug" />
+	<PackageReference Include="Serilog.Sinks.Console" />
   </ItemGroup>
 
 </Project>
