--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,6 +8,8 @@
 
 		<!-- EF Core -->
 		<PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
+		<PackageVersion Include="Npgsql" Version="9.0.3" />
+		<PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
 		
 		<!-- Observability -->
 		<PackageVersion Include="Sentry.Serilog" Version="5.14.0" />
