--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -12,6 +12,9 @@
 		<PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
 		<PackageVersion Include="Npgsql" Version="9.0.3" />
 		<PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+
+		<!-- DI Helper -->
+		<PackageVersion Include="Scrutor" Version="6.1.0" />
 		
 		<!-- Observability -->
 		<PackageVersion Include="Sentry.Serilog" Version="5.14.0" />
