--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -39,5 +39,6 @@
 		<PackageVersion Include="Shouldly" Version="4.3.0" />
 		<PackageVersion Include="MockQueryable.Moq" Version="7.0.3" />
 		<PackageVersion Include="Moq" Version="4.20.72" />
+		<PackageVersion Include="NetArchTest.Rules" Version="1.3.2" />
 	</ItemGroup>
 </Project>
