--- a/Src/Services/GauTracker/GauTracker.API/appsettings.json
+++ b/Src/Services/GauTracker/GauTracker.API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=database;Port=5432;Database=GauTracker;Username=postgres;Password=postgres;Include Error Detail=true"
+  },
+  "Auth": {
+    "JWTSigningKey": "16fa3f17-ac80-46e1-8211-3db93e8a57eb",
+    "AccessTokenValidityMinutes": 60,
+    "RefreshTokenValidityMinutes": 180
+  },
   "AllowedHosts": "*"
 }
