--- a/Src/Services/GauTracker/GauTracker.Application/GauTracker.Application.csproj
+++ b/Src/Services/GauTracker/GauTracker.Application/GauTracker.Application.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\CQRS\CQRS.Core\CQRS.Core.csproj" />
+    <ProjectReference Include="..\..\..\Common\Identification\Identification.Base\Identification.Base.csproj" />
+    <ProjectReference Include="..\..\..\Common\Repository\Repository.Base\Repository.Base.csproj" />
+    <ProjectReference Include="..\GauTracker.Domain\GauTracker.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
