--- a/Src/Services/GauTracker/GauTracker.Infrastructure/GauTracker.Infrastructure.csproj
+++ b/Src/Services/GauTracker/GauTracker.Infrastructure/GauTracker.Infrastructure.csproj
@@ -6,4 +6,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\CQRS\CQRS.Event.Core\CQRS.Event.Core.csproj" />
+    <ProjectReference Include="..\..\..\Common\Repository\Repository.Core\Repository.Core.csproj" />
+    <ProjectReference Include="..\..\..\Core\Infrastructure.Core\Infrastructure.Core.csproj" />
+    <ProjectReference Include="..\GauTracker.Application\GauTracker.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+  </ItemGroup>
+
 </Project>
