update app settings and added initial migration

--- a/Src/Services/GauTracker/GauTracker.API/appsettings.json
+++ b/Src/Services/GauTracker/GauTracker.API/appsettings.json
@@ -3,6 +3,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Observability": {
+      "ApplicationName": "GauTracker.API",
+      "Dns": "",
+      "MinimumBreadcrumbLevel": "Information",
+      "MinimumEventLevel": "Error"
     }
   },
   "ConnectionStrings": {
