--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,54 +1,48 @@
 <Project>
-	<PropertyGroup>
-		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-	</PropertyGroup>
-	<ItemGroup>
-
-		<!-- API -->
-		<PackageVersion Include="FastEndpoints" Version="7.0.1" />
-		<PackageVersion Include="FastEndpoints.Security" Version="7.0.1" />
-		<PackageVersion Include="FastEndpoints.Swagger" Version="7.0.1" />
-		
-		<!-- Extensions -->
-		<PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
-		<PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8" />
-		<PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.8" />
-
-		<!-- EF Core -->
-		<PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
-		<PackageVersion Include="Npgsql" Version="9.0.3" />
-		<PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-		<PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8" />
-		<PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8" />
-
-		<!-- Identity -->
-		<PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
-
-		<!-- DI Helper -->
-		<PackageVersion Include="Scrutor" Version="6.1.0" />
-
-		<!-- CQRS -->
-		<PackageVersion Include="Ardalis.Result" Version="10.1.0" />
-		
-		<!-- Observability -->
-		<PackageVersion Include="Sentry.Serilog" Version="5.14.0" />
-		<PackageVersion Include="Serilog" Version="4.3.0" />
-		<PackageVersion Include="Serilog.AspNetCore" Version="9.0.0" />
-		<PackageVersion Include="Serilog.Enrichers.Environment" Version="3.0.1" />
-		<PackageVersion Include="Serilog.Enrichers.Process" Version="3.0.0" />
-		<PackageVersion Include="Serilog.Enrichers.Thread" Version="4.0.0" />
-		<PackageVersion Include="Serilog.Expressions" Version="5.0.0" />
-		<PackageVersion Include="Serilog.Sinks.Debug" Version="3.0.0" />
-		<PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0" />
-
-		<!-- Testing -->
-		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
-		<PackageVersion Include="coverlet.collector" Version="6.0.4" />
-		<PackageVersion Include="xunit" Version="2.9.3" />
-		<PackageVersion Include="xunit.runner.visualstudio" Version="3.1.0" />
-		<PackageVersion Include="Shouldly" Version="4.3.0" />
-		<PackageVersion Include="MockQueryable.Moq" Version="7.0.3" />
-		<PackageVersion Include="Moq" Version="4.20.72" />
-		<PackageVersion Include="NetArchTest.Rules" Version="1.3.2" />
-	</ItemGroup>
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+  </PropertyGroup>
+  <ItemGroup>
+    <!-- API -->
+    <PackageVersion Include="FastEndpoints" Version="7.0.1" />
+    <PackageVersion Include="FastEndpoints.Security" Version="7.0.1" />
+    <PackageVersion Include="FastEndpoints.Swagger" Version="7.0.1" />
+    <!-- Extensions -->
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.8" />
+    <!-- EF Core -->
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
+    <PackageVersion Include="Npgsql" Version="9.0.3" />
+    <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8" />
+    <!-- Docker -->
+    <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+    <!-- Identity -->
+    <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
+    <!-- DI Helper -->
+    <PackageVersion Include="Scrutor" Version="6.1.0" />
+    <!-- CQRS -->
+    <PackageVersion Include="Ardalis.Result" Version="10.1.0" />
+    <!-- Observability -->
+    <PackageVersion Include="Sentry.Serilog" Version="5.14.0" />
+    <PackageVersion Include="Serilog" Version="4.3.0" />
+    <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageVersion Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+    <PackageVersion Include="Serilog.Enrichers.Process" Version="3.0.0" />
+    <PackageVersion Include="Serilog.Enrichers.Thread" Version="4.0.0" />
+    <PackageVersion Include="Serilog.Expressions" Version="5.0.0" />
+    <PackageVersion Include="Serilog.Sinks.Debug" Version="3.0.0" />
+    <PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <!-- Testing -->
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+    <PackageVersion Include="coverlet.collector" Version="6.0.4" />
+    <PackageVersion Include="xunit" Version="2.9.3" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.3" />
+    <PackageVersion Include="Shouldly" Version="4.3.0" />
+    <PackageVersion Include="MockQueryable.Moq" Version="8.0.0" />
+    <PackageVersion Include="Moq" Version="4.20.72" />
+    <PackageVersion Include="NetArchTest.Rules" Version="1.3.2" />
+  </ItemGroup>
 </Project>
