--- a/Tests/Common/Searchable.UnitTests/Searchable.UnitTests.csproj
+++ b/Tests/Common/Searchable.UnitTests/Searchable.UnitTests.csproj
@@ -12,4 +12,11 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="xunit.runner.visualstudio">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
