--- a/Tests/Services/GauTracker/GauTracker.Architecture.UnitTests/GauTracker.Architecture.UnitTests.csproj
+++ b/Tests/Services/GauTracker/GauTracker.Architecture.UnitTests/GauTracker.Architecture.UnitTests.csproj
@@ -19,4 +19,11 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="xunit.runner.visualstudio">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
