--- a/Src/Services/GauTracker/GauTracker.API/appsettings.json
+++ b/Src/Services/GauTracker/GauTracker.API/appsettings.json
@@ -2,13 +2,18 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "System": "Warning"
     },
     "Observability": {
-      "ApplicationName": "GauTracker.API",
-      "Dns": "",
-      "MinimumBreadcrumbLevel": "Information",
-      "MinimumEventLevel": "Error"
+      "Url": "http://openobserve:5080",
+      "Organization": "default",
+      "StreamName": "gautracker-api",
+      "Login": "admin@openobserve.ai",
+      "Key": "Complexpass#123",
+      "MinimumLevel": "Information"
     }
   },
   "ConnectionStrings": {
