--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,6 +11,23 @@ services:
     volumes:
       - postgres_gautracker:/var/lib/postgresql/data/ 
 
+  openobserve:
+    container_name: openobserve
+    environment:
+      - ZO_ROOT_USER_EMAIL=admin@openobserve.ai
+      - ZO_ROOT_USER_PASSWORD=Complexpass#123
+      - ZO_DATA_DIR=/data
+    restart: unless-stopped
+    ports:
+      - "5080:5080"
+    volumes:
+      - openobserve_data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5080/healthz"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   gautracker.api:
     container_name: gautracker-api
     environment:
