--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -26,7 +26,7 @@
     <!-- CQRS -->
     <PackageVersion Include="Ardalis.Result" Version="10.1.0" />
     <!-- Observability -->
-    <PackageVersion Include="Sentry.Serilog" Version="5.14.0" />
+	<PackageVersion Include="Serilog.Sinks.OpenObserve-KKP" Version="1.0.6" />
     <PackageVersion Include="Serilog" Version="4.3.0" />
     <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageVersion Include="Serilog.Enrichers.Environment" Version="3.0.1" />
