Implement custom adapter to seperate out the use of masstransit

--- a/Src/Common/Messaging/Messaging.Core/Messaging.Core.csproj
+++ b/Src/Common/Messaging/Messaging.Core/Messaging.Core.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="MassTransit.RabbitMQ" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
+    <PackageReference Include="Scrutor" />
   </ItemGroup>
 
   <ItemGroup>
