--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,6 +16,11 @@ jobs:
   build-and-test:
     name: Build and Test
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      actions: read
+      checks: write
+      pull-requests: write
     
     steps:
     - name: Checkout code
@@ -98,14 +103,46 @@ jobs:
           coverage/merged/
         retention-days: 30
 
+    - name: Test Results Summary
+      if: always()
+      run: |
+        echo "## 🧪 Test Results Summary" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        
+        # Count test result files
+        TRX_COUNT=$(find ./coverage -name "*.trx" | wc -l)
+        echo "📊 **Test Projects Run:** $TRX_COUNT" >> $GITHUB_STEP_SUMMARY
+        
+        # Check if coverage report exists
+        if [ -f "./coverage/merged/Summary.txt" ]; then
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "## 📈 Coverage Summary" >> $GITHUB_STEP_SUMMARY
+          grep -E "Line coverage|Branch coverage" ./coverage/merged/Summary.txt | while read line; do
+            echo "- $line" >> $GITHUB_STEP_SUMMARY
+          done
+        fi
+        
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "📋 Detailed test results and coverage reports are available in the artifacts." >> $GITHUB_STEP_SUMMARY
+
     - name: Publish test results
-      uses: dorny/test-reporter@v1
+      uses: dorny/test-reporter@v1.9.1
       if: always()
       with:
         name: Test Results
         path: 'coverage/*.trx'
         reporter: dotnet-trx
-        fail-on-error: true
+        fail-on-error: false
+        fail-on-empty: false
+
+    - name: Publish Test Results (Alternative)
+      uses: EnricoMi/publish-unit-test-result-action@v2
+      if: always() && failure()  # Only run if the first test reporter fails
+      with:
+        files: 'coverage/*.trx'
+        check_name: 'Test Results (Alternative)'
+        comment_mode: create new
+        fail_on: nothing
 
     - name: Code Coverage Report
       uses: irongut/CodeCoverageSummary@v1.3.0
@@ -136,7 +173,6 @@ jobs:
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: false
-        token: ${{ secrets.CODECOV_TOKEN }}  # Optional: add this secret for private repos
 
   build-api-images:
     name: Build API Docker Images
