--- a/Src/Core/Domain.Core/Domain.Core.csproj
+++ b/Src/Core/Domain.Core/Domain.Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NetTopologySuite" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Common\Domain.Support\Domain.Support.csproj" />
   </ItemGroup>
 
