--- a/Src/Core/Infrastructure.Core/Infrastructure.Core.csproj
+++ b/Src/Core/Infrastructure.Core/Infrastructure.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NetTopologySuite" />
   </ItemGroup>
 
   <ItemGroup>
