Implement initial logic for card and station background workers

--- a/Src/Services/Background/Background.API/Background.API.csproj
+++ b/Src/Services/Background/Background.API/Background.API.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Observability\Observability.csproj" />
+    <ProjectReference Include="..\Background.Infrastructure\Background.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
