--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -51,5 +51,9 @@
     <PackageVersion Include="Hangfire" Version="1.8.20" />
     <PackageVersion Include="Hangfire.Core" Version="1.8.20" />
     <PackageVersion Include="Hangfire.PostgreSql" Version="1.20.12" />
+	<!-- CSV -->
+	<PackageVersion Include="CsvHelper" Version="33.1.0" />
+	<!-- Rest API -->
+	<PackageVersion Include="RestSharp" Version="112.1.0" />
   </ItemGroup>
 </Project>
