--- a/Src/Services/Background/Background.Domain/Background.Domain.csproj
+++ b/Src/Services/Background/Background.Domain/Background.Domain.csproj
@@ -1,3 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\Domain.Core\Domain.Core.csproj" />
+  </ItemGroup>
 </Project>
