--- a/Src/Services/Background/Background.Infrastructure/Background.Infrastructure.csproj
+++ b/Src/Services/Background/Background.Infrastructure/Background.Infrastructure.csproj
@@ -1,3 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\CQRS\CQRS.Event.Core\CQRS.Event.Core.csproj" />
+    <ProjectReference Include="..\..\..\Common\Repository\Repository.Core\Repository.Core.csproj" />
+    <ProjectReference Include="..\..\..\Core\Infrastructure.Core\Infrastructure.Core.csproj" />
+    <ProjectReference Include="..\Background.Application\Background.Application.csproj" />
+  </ItemGroup>
 </Project>
