Implement blob storage integration

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,11 +7,12 @@
     <PackageVersion Include="FastEndpoints" Version="7.0.1" />
     <PackageVersion Include="FastEndpoints.Security" Version="7.0.1" />
     <PackageVersion Include="FastEndpoints.Swagger" Version="7.0.1" />
-    <PackageVersion Include="MassTransit.RabbitMQ" Version="8.5.2" />
     <!-- Extensions -->
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.Extensions.Options" Version="9.0.8" />
     <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.8" />
+	<PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.8" />
     <!-- EF Core -->
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
     <PackageVersion Include="NetTopologySuite" Version="2.6.0" />
@@ -51,9 +52,13 @@
     <PackageVersion Include="Hangfire" Version="1.8.20" />
     <PackageVersion Include="Hangfire.Core" Version="1.8.20" />
     <PackageVersion Include="Hangfire.PostgreSql" Version="1.20.12" />
-	<!-- CSV -->
-	<PackageVersion Include="CsvHelper" Version="33.1.0" />
-	<!-- Rest API -->
-	<PackageVersion Include="RestSharp" Version="112.1.0" />
+    <!-- CSV -->
+    <PackageVersion Include="CsvHelper" Version="33.1.0" />
+    <!-- Rest API -->
+    <PackageVersion Include="RestSharp" Version="112.1.0" />
+    <!-- Blob Storage -->
+    <PackageVersion Include="Minio" Version="6.0.5" />
+	<!-- Messaging -->
+	<PackageVersion Include="MassTransit.RabbitMQ" Version="8.5.2" />
   </ItemGroup>
 </Project>
