implement import transaction history

--- a/Src/Services/GauTracker/GauTracker.API/appsettings.json
+++ b/Src/Services/GauTracker/GauTracker.API/appsettings.json
@@ -24,5 +24,12 @@
     "AccessTokenValidityMinutes": 60,
     "RefreshTokenValidityMinutes": 180
   },
+  "BlobService": {
+    "AllowedFileExtensions": [ ".CSV" ],
+    "Endpoint": "minio:9000",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin",
+    "UseSSL": "false"
+  },
   "AllowedHosts": "*"
 }
