--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -38,6 +38,25 @@ services:
       - "5672:5672"
       - "15672:15672"
 
+  minio:
+    container_name: minio
+    command: server /data --console-address ":9001"
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+      - MINIO_DOMAIN=localhost
+    restart: unless-stopped
+    ports:
+      - "9000:9000"   # MinIO API
+      - "9001:9001"   # MinIO Console
+    volumes:
+      - minio_data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+
   gautracker.api:
     container_name: gautracker-api
     environment:
