implment event managment for importing transaction history

--- a/Src/Core/Domain.Core/Domain.Core.csproj
+++ b/Src/Core/Domain.Core/Domain.Core.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\CQRS\CQRS.Event.Base\CQRS.Event.Base.csproj" />
     <ProjectReference Include="..\..\Common\Domain.Support\Domain.Support.csproj" />
   </ItemGroup>
 
