--- a/Src/Services/GauTracker/GauTracker.Application/GauTracker.Application.csproj
+++ b/Src/Services/GauTracker/GauTracker.Application/GauTracker.Application.csproj
@@ -4,6 +4,7 @@
     <ProjectReference Include="..\..\..\Common\BlobStorage\BlobStorage.csproj" />
     <ProjectReference Include="..\..\..\Common\CQRS\CQRS.Core\CQRS.Core.csproj" />
     <ProjectReference Include="..\..\..\Common\Identification\Identification.Base\Identification.Base.csproj" />
+    <ProjectReference Include="..\..\..\Common\Messaging\Messaging.Core\Messaging.Core.csproj" />
     <ProjectReference Include="..\..\..\Common\Pagination\Pagination.csproj" />
     <ProjectReference Include="..\..\..\Common\Repository\Repository.Base\Repository.Base.csproj" />
     <ProjectReference Include="..\GauTracker.Domain\GauTracker.Domain.csproj" />
