--- a/Src/Services/GauTracker/GauTracker.API/appsettings.json
+++ b/Src/Services/GauTracker/GauTracker.API/appsettings.json
@@ -31,5 +31,10 @@
     "SecretKey": "minioadmin",
     "UseSSL": "false"
   },
+  "Messaging": {
+    "Host": "amqp://rabbitmq:5672",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "AllowedHosts": "*"
 }
