--- a/Src/Services/Background/Background.API/appsettings.json
+++ b/Src/Services/Background/Background.API/appsettings.json
@@ -20,5 +20,17 @@
     "DefaultConnection": "Host=database;Port=5432;Database=GauTracker;Username=postgres;Password=postgres;Include Error Detail=true",
     "HangfireConnection": "Host=database;Port=5432;Database=GauTrackerHangfire;Username=postgres;Password=postgres;Include Error Detail=true"
   },
+  "BlobService": {
+    "AllowedFileExtensions": [ ".CSV" ],
+    "Endpoint": "minio:9000",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin",
+    "UseSSL": "false"
+  },
+  "Messaging": {
+    "Host": "amqp://rabbitmq:5672",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "AllowedHosts": "*"
 }
